nats-micro/tests/ui/service_error_source_not_error.stderr
error[E0277]: the trait bound `std::string::String: StdError` is not satisfied
 --> tests/ui/service_error_source_not_error.rs:3:1
  |
3 | #[service_error]
  | ^^^^^^^^^^^^^^^^ the trait `StdError` is not implemented for `std::string::String`
  |
  = note: required for the cast from `&std::string::String` to `&(dyn StdError + std::marker::Send + Sync + 'static)`
  = note: this error originates in the attribute macro `service_error` (in Nightly builds, run with -Z macro-backtrace for more info)
